--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm just a guy who wants to make a career out of computer programming.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Roanoke,TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video games and going to the gym.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Astronaut</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Dallas,TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be part of the future.</p>
     </section>
 
     <footer id="footer">
